# Y-MAVSDK

./: CMakeLists.txt
example/Test_demo/: CMakeLists.txt  Test_demo.cpp
src/cmake/: compiler_flags.cmake  unit_tests.cmake
src/core/: CMakeLists.txt
src/integration_tests/: CMakeLists.txt
src/mavsdk_server/src/: CMakeLists.txt
src/plugins/action/: CMakeLists.txt
src/plugins/calibration/: CMakeLists.txt
src/plugins/camera/: CMakeLists.txt
src/plugins/failure/: CMakeLists.txt
src/plugins/follow_me/: CMakeLists.txt
src/plugins/ftp/: CMakeLists.txt
src/plugins/geofence/: CMakeLists.txt
src/plugins/gimbal/: CMakeLists.txt
src/plugins/info/: CMakeLists.txt
src/plugins/log_files/: CMakeLists.txt
src/plugins/manual_control/: CMakeLists.txt
src/plugins/mavlink_passthrough/: CMakeLists.txt
src/plugins/mission/: CMakeLists.txt
src/plugins/mission_raw/: CMakeLists.txt
src/plugins/mission_raw_server/: CMakeLists.txt
src/plugins/mocap/: CMakeLists.txt
src/plugins/offboard/: CMakeLists.txt
src/plugins/param/: CMakeLists.txt
src/plugins/param_server/: CMakeLists.txt
src/plugins/server_utility/: CMakeLists.txt
src/plugins/shell/: CMakeLists.txt
src/plugins/telemetry/: CMakeLists.txt
src/plugins/telemetry_server/: CMakeLists.txt
src/plugins/tracking_server/: CMakeLists.txt
src/plugins/tune/: CMakeLists.txt
